[tool.poetry]
name = "ailedeau"
version = "0.1.0"
description = ""
authors = ["Baptiste LABAT <baptiste.labat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
